--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Fitur Ramah Disabilitas — KAI</title>
+  <a href="https://appetize.io/embed/b_mttoxueiea6ziehp6ns6tbzjqa" download>📥 ChatBot KAI</a>
   <style>
     body {margin:0;font-family:Arial,Helvetica,sans-serif;background:#f2f2f2;color:#333;}
     header {background:#fff;padding:10px 20px;display:flex;align-items:center;box-shadow:0 2px 4px rgba(0,0,0,0.1);}
