--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@ a {
     <a href="penumpang.html" class="btn" style="background:#ff6600; color:#fff; padding:12px 20px; border-radius:6px; text-decoration:none; font-weight:bold;">Pesan Tiket</a>
   </section>
 
+
+<section style="text-align:center; margin:40px 0;">
+  <h2>KAI ChatBot Emulator</h2>
+  <iframe 
+      src="https://appetize.io/embed/ID_APK_ANDA?device=pixel6&scale=75&autoplay=true"
+      width="400"
+      height="800"
+      frameborder="0"
+      scrolling="no">
+  </iframe>
+</section>
+
+  
   <!-- Layanan Utama -->
  <!-- Layanan Utama -->
 <section class="layanan" style="padding:50px; text-align:center; background:#f4f4f4; color:#333;">
@@ -285,3 +298,4 @@ a {
 </script>
 
 </footer>
+
