--- a/layanan.html
+++ b/layanan.html
@@ -61,6 +61,16 @@
           <li><a href="login.html"><i class="fas fa-user"></i> LOGIN</a></li> 
         </ul> 
       </nav> 
+      <section style="text-align:center; margin:40px 0;">
+  <h2>KAI ChatBot Emulator</h2>
+  <iframe 
+      src="https://appetize.io/embed/ID_APK_ANDA?device=pixel6&scale=75&autoplay=true"
+      width="400"
+      height="800"
+      frameborder="0"
+      scrolling="no">
+  </iframe>
+</section>
     </header> 
     <div class="container"> 
       <h2>Pilih Jenis Layanan Kami</h2> 
@@ -95,6 +105,8 @@
 </br>
 <br>
 </br>
+<br>
+</br>
 <footer>
     <!-- FOOTER BOTTOM -->
   <div class="footer-foot-1" style="background:#F08200;color:#fff;width:100%;">
@@ -104,4 +116,5 @@
     </p>
   </div>
 </div>
+
 </footer>
