--- a/preorder.html
+++ b/preorder.html
@@ -88,21 +88,16 @@ nav { background: #1565c0; display: flex; justify-content: center; padding: 10px
       background: #e65100;
     }
 
-    /* MENU PREVIEW */
     .menu-section {
-      margin-top: 40px;
-      text-align: center;
+      margin-top: 40px; text-align: center;
     }
     .menu-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
       margin-top: 20px;
     }
     .menu-item {
-      background: #fff8f0;
-      padding: 15px;
-      border-radius: 10px;
+      background: #fff8f0; padding: 15px; border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       transition: transform 0.3s;
     }
@@ -135,7 +130,6 @@ nav { background: #1565c0; display: flex; justify-content: center; padding: 10px
   </style>
 </head>
 <body>
-  <!-- HEADER -->
  <header> 
     <h1>Layanan KAI</h1> 
   </header> 
@@ -143,18 +137,16 @@ nav { background: #1565c0; display: flex; justify-content: center; padding: 10px
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Beranda - KAI</title> 
-    <!-- Font Awesome --> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> 
     <style> 
       body { margin: 0; font-family: Arial, sans-serif; background: #505066; color: white; } 
       header { background: #a03d3d; padding: 10px 40px; } 
-      nav { display: flex; justify-content: space-between; /* logo di kiri, menu di kanan */ align-items: center; } 
-      /* Logo */ 
-      .logo img { height: 40px; /* kecil di navbar */ } 
-      /* Menu */ 
+      nav { display: flex; justify-content: space-between; align-items: center; } 
+      .logo img { height: 40px; } 
+
       nav ul { list-style: none; margin: 0; padding: 0; display: flex; } 
       nav ul li { margin-left: 40px; } 
-      nav ul li a { text-decoration: none; color: rgb(255, 255, 255); font-weight: bold; display: flex; align-items: center; gap: 8px; /* jarak antara icon dan teks */ transition: color 0.3s; } 
+      nav ul li a { text-decoration: none; color: rgb(255, 255, 255); font-weight: bold; display: flex; align-items: center; gap: 8px; transition: color 0.3s; } 
       nav ul li a i { font-size: 18px; color: #ccc; transition: color 0.3s; } 
       nav ul li a:hover { color: #ff6600; } 
       nav ul li a:hover i { color: #ff6600; } 
@@ -162,11 +154,10 @@ nav { background: #1565c0; display: flex; justify-content: center; padding: 10px
   </head> 
       <header> 
       <nav> 
-        <!-- Logo KAI --> 
+  
         <div class="logo"> 
           <a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Logo_PT_Kereta_Api_Indonesia_%28Persero%29_2020.svg" alt="KAI Logo"></a> 
         </div> 
-        <!-- Menu --> 
         <ul> 
           <li><a href="index.html"><i class="fas fa-home"></i> BERANDA</a></li> 
           <li><a href="layanan.html"><i class="fas fa-concierge-bell"></i> LAYANAN</a></li> 
@@ -176,7 +167,7 @@ nav { background: #1565c0; display: flex; justify-content: center; padding: 10px
       </nav> 
     </header> 
 
-  <!-- FORM -->
+
   <div class="container">
     <h1>Preorder Makanan</h1>
     <form>
@@ -208,8 +199,6 @@ nav { background: #1565c0; display: flex; justify-content: center; padding: 10px
 
       <button type="submit">Pesan Sekarang</button>
     </form>
-
-    <!-- MENU PREVIEW -->
     <div class="menu-section">
       <h2>Daftar Menu</h2>
       <div class="menu-grid">
@@ -236,10 +225,9 @@ nav { background: #1565c0; display: flex; justify-content: center; padding: 10px
       </div>
     </div>
   </div>
-
-  <!-- FOOTER -->
   <footer>
     © 2025 PT Kereta Api Indonesia (Persero), All Rights Reserved
   </footer>
 </body>
 </html>
+
