--- a/barang.html
+++ b/barang.html
@@ -55,24 +55,24 @@
     <link rel="stylesheet" href="https://www.kai.id/static/assets/select2.css">
     <script type="text/javascript" src="https://www.kai.id/static/assets/select2.js"></script>
 	
-	<!-- webchat -->
+	
 	<link rel="stylesheet" href="https://www.kai.id/static/konten/webchat/css/normalize.css">
 	<link rel='stylesheet prefetch' href='https://www.kai.id/static/konten/webchat/css/jquery.mCustomScrollbar.min.css'>
     <link rel="stylesheet" href="https://www.kai.id/static/konten/webchat/css/orange.css">
     <link rel="stylesheet" href="https://www.kai.id/static/konten/webchat/css/button.css">
 	
-    <!--Modernizr js-->
+   
     <script src="https://www.kai.id/static/vendors/modernizr/modernizr.js"></script>
 		<style>
 		.box{
 		position: relative;
-		width: 100%;		/* desired width */
+		width: 100%;		
 		}
 		
 		.box:before{
 		content: "";
 		display: block;
-		padding-top: 100%; 	/* initial ratio of 1:1*/
+		padding-top: 100%; 	
 		}
 		
 		.content{
@@ -87,7 +87,7 @@
 		}
 		
 		.rotate {
-			right: 75px; /* same as height */
+			right: 75px; 
 			width:450px;
 	height: 40px;
 	padding: 0 1em;
@@ -95,13 +95,13 @@
 	transform-origin: 100% 0;
 	position: absolute;
 	font-size:45px;
-	line-height: 40px; /* same as height, for vertical centering */
+	line-height: 40px;
 		}
 		
 		
 	
 		</style>
-		<!-- Global Site Tag (gtag.js) - Google Analytics -->
+		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -118,9 +118,9 @@
     <p class="browsenrupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 	
-    <!--Page Content-->
+    <
     <div class="page-content">
-           <!-- Page Navigation-->
+           
       <div class="main-nav main-nav-portfolio nav-absolute">
         <div class="__middle bgc-transparent">
           <div class="container-fluid">
@@ -266,7 +266,7 @@
           </ul>
         </nav>
       </div>
-      <!-- Page Navigation-->
+      
 	  
 	<div id="wrapper"  style="background-image:url(https://www.kai.id/static/header/dropdown biru 1170x625.png);"> 
 	<div id="sidebar-wrapper" style='background-image: url(https://www.kai.id/static/header/booking3.png);'>
@@ -5457,4 +5457,5 @@ $(document).ready(function(){
    
   <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9889771fcc383d8c","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.9.1","token":"7d06e00a46a9413b8f6a2807caeb918f"}' crossorigin="anonymous"></script>
 </body>
+
 </html>
